Looking into data and merge two datafile

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8dfb0cfc-95a1-4e7f-942b-643fe63b7cdf",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "3e59a4f8-7bc9-4fb1-b0a9-6864e4331854",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "ac89388b-a65f-4e0d-933d-09f99460f5eb",
    "metadata": {},
    "outputs": [],
@@ -32,8 +32,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "0c4d9c35-8d9c-4c55-980d-2a24f13612e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4803, 20)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_movies.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "097f84a1-5e43-4b99-9404-31b56d2c6cfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4803, 4)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_credits.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5b58fc67-7175-4432-bd8d-10658f6e7318",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>homepage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>production_companies</th>\n",
+       "      <th>production_countries</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [budget, genres, homepage, id, keywords, original_language, original_title, overview, popularity, production_companies, production_countries, release_date, revenue, runtime, spoken_languages, status, tagline, title, vote_average, vote_count]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_movies.head(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5ee3038a-9999-4d52-a3d3-f25a4b807be6",
    "metadata": {},
    "outputs": [
     {
@@ -64,79 +175,177 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>19995</td>\n",
-       "      <td>Avatar</td>\n",
-       "      <td>[{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe48009251416c750aca23\", \"de...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>285</td>\n",
-       "      <td>Pirates of the Caribbean: At World's End</td>\n",
-       "      <td>[{\"cast_id\": 4, \"character\": \"Captain Jack Spa...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe4232c3a36847f800b579\", \"de...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>206647</td>\n",
-       "      <td>Spectre</td>\n",
-       "      <td>[{\"cast_id\": 1, \"character\": \"James Bond\", \"cr...</td>\n",
-       "      <td>[{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>49026</td>\n",
-       "      <td>The Dark Knight Rises</td>\n",
-       "      <td>[{\"cast_id\": 2, \"character\": \"Bruce Wayne / Ba...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe4781c3a36847f81398c3\", \"de...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>49529</td>\n",
-       "      <td>John Carter</td>\n",
-       "      <td>[{\"cast_id\": 5, \"character\": \"John Carter\", \"c...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   movie_id                                     title  \\\n",
-       "0     19995                                    Avatar   \n",
-       "1       285  Pirates of the Caribbean: At World's End   \n",
-       "2    206647                                   Spectre   \n",
-       "3     49026                     The Dark Knight Rises   \n",
-       "4     49529                               John Carter   \n",
-       "\n",
-       "                                                cast  \\\n",
-       "0  [{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...   \n",
-       "1  [{\"cast_id\": 4, \"character\": \"Captain Jack Spa...   \n",
-       "2  [{\"cast_id\": 1, \"character\": \"James Bond\", \"cr...   \n",
-       "3  [{\"cast_id\": 2, \"character\": \"Bruce Wayne / Ba...   \n",
-       "4  [{\"cast_id\": 5, \"character\": \"John Carter\", \"c...   \n",
-       "\n",
-       "                                                crew  \n",
-       "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  \n",
-       "1  [{\"credit_id\": \"52fe4232c3a36847f800b579\", \"de...  \n",
-       "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  \n",
-       "3  [{\"credit_id\": \"52fe4781c3a36847f81398c3\", \"de...  \n",
-       "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
+       "Empty DataFrame\n",
+       "Columns: [movie_id, title, cast, crew]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "data_credits.head(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2f3b623a-22bf-440d-8860-8ef14b889458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merg_data = pd.merge(data_movies,data_credits,on = 'title').head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fb980fcd-4cff-4f6a-912c-703f85c5c2e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>homepage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>production_companies</th>\n",
+       "      <th>...</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>crew</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [budget, genres, homepage, id, keywords, original_language, original_title, overview, popularity, production_companies, production_countries, release_date, revenue, runtime, spoken_languages, status, tagline, title, vote_average, vote_count, movie_id, cast, crew]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merg_data.head(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0ebbaa1c-808b-4eec-b2d4-1731b9a42514",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "budget                  0\n",
+       "genres                  0\n",
+       "homepage                0\n",
+       "id                      0\n",
+       "keywords                0\n",
+       "original_language       0\n",
+       "original_title          0\n",
+       "overview                0\n",
+       "popularity              0\n",
+       "production_companies    0\n",
+       "production_countries    0\n",
+       "release_date            0\n",
+       "revenue                 0\n",
+       "runtime                 0\n",
+       "spoken_languages        0\n",
+       "status                  0\n",
+       "tagline                 0\n",
+       "title                   0\n",
+       "vote_average            0\n",
+       "vote_count              0\n",
+       "movie_id                0\n",
+       "cast                    0\n",
+       "crew                    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merg_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "992aa33f-0f7a-4a7f-a5d2-dbf560a480ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merg_data.duplicated().sum()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "097f84a1-5e43-4b99-9404-31b56d2c6cfc",
+   "id": "6676c0a4-982c-450d-bf18-b06297dd933f",
    "metadata": {},
    "outputs": [],
    "source": []
