--- a/main.ipynb
+++ b/main.ipynb
@@ -464,31 +464,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "5329f65c-8f6b-46c3-a885-96b82c1a9b76",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "original_language\n",
-       "en    1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4809 entries, 0 to 4808\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   budget                4809 non-null   int64  \n",
+      " 1   genres                4809 non-null   object \n",
+      " 2   homepage              1713 non-null   object \n",
+      " 3   id                    4809 non-null   int64  \n",
+      " 4   keywords              4809 non-null   object \n",
+      " 5   original_language     4809 non-null   object \n",
+      " 6   original_title        4809 non-null   object \n",
+      " 7   overview              4806 non-null   object \n",
+      " 8   popularity            4809 non-null   float64\n",
+      " 9   production_companies  4809 non-null   object \n",
+      " 10  production_countries  4809 non-null   object \n",
+      " 11  release_date          4808 non-null   object \n",
+      " 12  revenue               4809 non-null   int64  \n",
+      " 13  runtime               4807 non-null   float64\n",
+      " 14  spoken_languages      4809 non-null   object \n",
+      " 15  status                4809 non-null   object \n",
+      " 16  tagline               3965 non-null   object \n",
+      " 17  title                 4809 non-null   object \n",
+      " 18  vote_average          4809 non-null   float64\n",
+      " 19  vote_count            4809 non-null   int64  \n",
+      " 20  movie_id              4809 non-null   int64  \n",
+      " 21  cast                  4809 non-null   object \n",
+      " 22  crew                  4809 non-null   object \n",
+      "dtypes: float64(3), int64(5), object(15)\n",
+      "memory usage: 864.2+ KB\n"
+     ]
     }
    ],
    "source": [
-    "merg_data['original_language'].value_counts()"
+    "merg_data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "8c9a2a9c-12eb-473d-a5ef-8cfac90f1331",
+   "execution_count": null,
+   "id": "993f74fc-5a80-4c0e-bf82-30d4b095f000",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# genre , homepage ,id , keywords , title , overview , production_companies , cast , crew \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9aa96793-2498-46f3-999e-ac182b859256",
    "metadata": {},
    "outputs": [
     {
@@ -512,25 +546,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>budget</th>\n",
+       "      <th>id</th>\n",
        "      <th>genres</th>\n",
        "      <th>homepage</th>\n",
-       "      <th>id</th>\n",
        "      <th>keywords</th>\n",
-       "      <th>original_language</th>\n",
-       "      <th>original_title</th>\n",
-       "      <th>overview</th>\n",
-       "      <th>popularity</th>\n",
-       "      <th>production_companies</th>\n",
-       "      <th>...</th>\n",
-       "      <th>runtime</th>\n",
-       "      <th>spoken_languages</th>\n",
-       "      <th>status</th>\n",
-       "      <th>tagline</th>\n",
        "      <th>title</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>vote_count</th>\n",
-       "      <th>movie_id</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>production_companies</th>\n",
        "      <th>cast</th>\n",
        "      <th>crew</th>\n",
        "    </tr>\n",
@@ -538,82 +560,59 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>237000000</td>\n",
+       "      <td>19995</td>\n",
        "      <td>[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"nam...</td>\n",
        "      <td>http://www.avatarmovie.com/</td>\n",
-       "      <td>19995</td>\n",
        "      <td>[{\"id\": 1463, \"name\": \"culture clash\"}, {\"id\":...</td>\n",
-       "      <td>en</td>\n",
        "      <td>Avatar</td>\n",
        "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
-       "      <td>150.437577</td>\n",
        "      <td>[{\"name\": \"Ingenious Film Partners\", \"id\": 289...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>162.0</td>\n",
-       "      <td>[{\"iso_639_1\": \"en\", \"name\": \"English\"}, {\"iso...</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>Enter the World of Pandora.</td>\n",
-       "      <td>Avatar</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>11800</td>\n",
-       "      <td>19995</td>\n",
        "      <td>[{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...</td>\n",
        "      <td>[{\"credit_id\": \"52fe48009251416c750aca23\", \"de...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      budget                                             genres  \\\n",
-       "0  237000000  [{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"nam...   \n",
+       "      id                                             genres  \\\n",
+       "0  19995  [{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"nam...   \n",
        "\n",
-       "                      homepage     id  \\\n",
-       "0  http://www.avatarmovie.com/  19995   \n",
+       "                      homepage  \\\n",
+       "0  http://www.avatarmovie.com/   \n",
        "\n",
-       "                                            keywords original_language  \\\n",
-       "0  [{\"id\": 1463, \"name\": \"culture clash\"}, {\"id\":...                en   \n",
+       "                                            keywords   title  \\\n",
+       "0  [{\"id\": 1463, \"name\": \"culture clash\"}, {\"id\":...  Avatar   \n",
        "\n",
-       "  original_title                                           overview  \\\n",
-       "0         Avatar  In the 22nd century, a paraplegic Marine is di...   \n",
+       "                                            overview  \\\n",
+       "0  In the 22nd century, a paraplegic Marine is di...   \n",
        "\n",
-       "   popularity                               production_companies  ... runtime  \\\n",
-       "0  150.437577  [{\"name\": \"Ingenious Film Partners\", \"id\": 289...  ...   162.0   \n",
-       "\n",
-       "                                    spoken_languages    status  \\\n",
-       "0  [{\"iso_639_1\": \"en\", \"name\": \"English\"}, {\"iso...  Released   \n",
-       "\n",
-       "                       tagline   title vote_average vote_count movie_id  \\\n",
-       "0  Enter the World of Pandora.  Avatar          7.2      11800    19995   \n",
+       "                                production_companies  \\\n",
+       "0  [{\"name\": \"Ingenious Film Partners\", \"id\": 289...   \n",
        "\n",
        "                                                cast  \\\n",
        "0  [{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...   \n",
        "\n",
        "                                                crew  \n",
-       "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  \n",
-       "\n",
-       "[1 rows x 23 columns]"
+       "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merg_data"
+    "merg_data[['id','genres','homepage' , 'keywords' , 'title' , 'overview', 'production_companies' , 'cast', 'crew']].head(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "993f74fc-5a80-4c0e-bf82-30d4b095f000",
+   "id": "c3069230-8bc5-4469-8a32-4f1326ef54ae",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# genre , homepage ,id , keywords\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
