remove null column

--- a/main.ipynb
+++ b/main.ipynb
@@ -521,95 +521,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "id": "9aa96793-2498-46f3-999e-ac182b859256",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_fea_data = merg_data[['id','genres' , 'keywords' , 'title' , 'overview', 'production_companies' , 'cast', 'crew']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "c3069230-8bc5-4469-8a32-4f1326ef54ae",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>homepage</th>\n",
-       "      <th>keywords</th>\n",
-       "      <th>title</th>\n",
-       "      <th>overview</th>\n",
-       "      <th>production_companies</th>\n",
-       "      <th>cast</th>\n",
-       "      <th>crew</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>19995</td>\n",
-       "      <td>[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"nam...</td>\n",
-       "      <td>http://www.avatarmovie.com/</td>\n",
-       "      <td>[{\"id\": 1463, \"name\": \"culture clash\"}, {\"id\":...</td>\n",
-       "      <td>Avatar</td>\n",
-       "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
-       "      <td>[{\"name\": \"Ingenious Film Partners\", \"id\": 289...</td>\n",
-       "      <td>[{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe48009251416c750aca23\", \"de...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      id                                             genres  \\\n",
-       "0  19995  [{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"nam...   \n",
-       "\n",
-       "                      homepage  \\\n",
-       "0  http://www.avatarmovie.com/   \n",
-       "\n",
-       "                                            keywords   title  \\\n",
-       "0  [{\"id\": 1463, \"name\": \"culture clash\"}, {\"id\":...  Avatar   \n",
-       "\n",
-       "                                            overview  \\\n",
-       "0  In the 22nd century, a paraplegic Marine is di...   \n",
-       "\n",
-       "                                production_companies  \\\n",
-       "0  [{\"name\": \"Ingenious Film Partners\", \"id\": 289...   \n",
-       "\n",
-       "                                                cast  \\\n",
-       "0  [{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...   \n",
-       "\n",
-       "                                                crew  \n",
-       "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
+       "id                      0\n",
+       "genres                  0\n",
+       "keywords                0\n",
+       "title                   0\n",
+       "overview                3\n",
+       "production_companies    0\n",
+       "cast                    0\n",
+       "crew                    0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merg_data[['id','genres','homepage' , 'keywords' , 'title' , 'overview', 'production_companies' , 'cast', 'crew']].head(1)"
+    "imp_fea_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "5de19d5f-3987-4736-aa7b-fdb7a9d90357",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_12152\\187566251.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  imp_fea_data.dropna(inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "imp_fea_data.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "35cb6e63-aa58-4d5b-a4e7-73963737f74a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_fea_data.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "caf7a198-c269-4e4c-92e6-0f5d8547e7b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4806, 8)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_fea_data.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3069230-8bc5-4469-8a32-4f1326ef54ae",
+   "id": "266c356e-a8fd-403d-b26c-318c493b2ec2",
    "metadata": {},
    "outputs": [],
    "source": []
